<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEDEDE"
    android:clipChildren="false"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/redes_sociales_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:stretchColumns="0,1,2">

        <TableRow
            android:id="@+id/redes_sociales_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/facebook"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#4267b2"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/link_face"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:srcCompat="@drawable/ic_facebook" />

            <ImageView
                android:id="@+id/twitter"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#1da1f2"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/link_tw"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:srcCompat="@drawable/ic_twitter" />

            <ImageView
                android:id="@+id/instagram"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#C13584"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/link_insta"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:srcCompat="@drawable/ic_instagram" />
        </TableRow>

    </TableLayout>

    <ImageButton
        android:id="@+id/btn_play_stop"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@id/img_inicio"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="-200dp"
        android:layout_marginRight="-200dp"
        android:layout_toStartOf="@id/img_inicio"
        android:layout_toLeftOf="@id/img_inicio"
        android:adjustViewBounds="false"
        android:background="@drawable/ic_play_circle_filled_black_24dp"
        android:contentDescription="@string/btn_play_stop" />

    <ImageView
        android:id="@+id/img_inicio"
        android:layout_width="240dp"
        android:layout_height="298dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="102dp"
        android:layout_marginLeft="102dp"
        android:layout_marginTop="270dp"
        android:layout_marginRight="102dp"
        android:contentDescription="@string/img_logo"
        android:src="@drawable/logo_radio" />

    <ImageButton
        android:id="@+id/btn_mute"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@id/img_inicio"
        android:layout_marginStart="-95dp"
        android:layout_marginLeft="-95dp"
        android:layout_marginTop="23dp"
        android:layout_toEndOf="@id/img_inicio"
        android:layout_toRightOf="@id/img_inicio"
        android:background="@drawable/ic_volume_up_black_24dp"
        android:contentDescription="@string/btn_mute" />

</RelativeLayout>